# Angular Natal Planet Finder, a Rust CLI application to find places 
# where natal planets are foreground in some sidereal context.
# Copyright (C) 2024 Mike Verducci

[package]
name = "angular-natal-planet-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unused = "allow"

[patch.crates-io]
# https://github.com/sdd/kiddo/issues/154
generator = { git = "https://github.com/Xudong-Huang/generator-rs", rev = "e3f16af" }

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.34"
chrono-tz = "0.8.4"
console = "0.15.8"
dialoguer = "0.11.0"
libc = "0.2"
tzf-rs = "0.4.5"
cross = "0.2.5"
swiss-ephemeris-lib = { git = "https://github.com/lightningandthunder/swiss-ephemeris-lib.git", branch = "mistress" }
